# ocaml-farmhash

./: .gitignore  Makefile  _oasis  _tags  dune-project  farmhash.opam  myocamlbuild_config.ml
.github/workflows/: build.yml
bench/: bench.ml  dune
src/: META  dune  farmhash.ml  farmhash.mllib  farmhash_stubs.c  libfarmhash_stubs.clib
