opam-version: "2.0"
maintainer: "github@ahrefs.com"
authors: "Ahrefs <github@ahrefs.com>"
license: "LGPL-2.1-only with OCaml-LGPL-linking-exception"
homepage: "https://github.com/ahrefs/ocaml-farmhash"
dev-repo: "git://github.com/ahrefs/ocaml-farmhash.git"
bug-reports: "https://github.com/ahrefs/ocaml-farmhash/issues"
tags: ["org:ahrefs"]
build: [ "dune" "build" "-p" name "-j" jobs ]
depends: [
  "ocaml" {>= "4.01.0"}
  "dune"
]
depexts: [
  ["g++" "libfarmhash-dev"] {os-family = "debian"}
  ["gcc-c++"] {os-distribution = "fedora"}
]
synopsis: "Bindings for Google's farmhash library"
